--- a/model/gsl_fit3164.ipynb
+++ b/model/gsl_fit3164.ipynb
@@ -28,6 +28,25 @@
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "!pip3 install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cu118"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# uncomment if using cpu training\n",
+        "# !pip3 install torch torchvision torchaudio"
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "Mo8AJ5pXdUys"
