--- a/model/old_gsl_fit3164.ipynb
+++ b/model/old_gsl_fit3164.ipynb
@@ -61,7 +61,37 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "!pip3 install zenodo_get"
+        "# import os\n",
+        "# print(os.getcwd())"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# os.chdir('datasets/gsl')\n",
+        "# print(os.getcwd())"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# !pip cache purge"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# !pip3 install -U --force-reinstall zenodo_get\n",
+        "# !pip3 install git+https://github.com/dvolgyes/zenodo_get"
       ]
     },
     {
@@ -72,7 +102,7 @@
       },
       "outputs": [],
       "source": [
-        "!zenodo_get 4756317"
+        "# !zenodo_get 4756317"
       ]
     },
     {
@@ -90,11 +120,11 @@
       "source": [
         "# all imports\n",
         "import os\n",
-        "from GPUtil import showUtilization as gpu_usage\n",
-        "from numba import cuda\n",
+        "# from GPUtil import showUtilization as gpu_usage\n",
+        "# from numba import cuda\n",
         "\n",
         "\n",
-        "import cv2\n",
+        "# import cv2\n",
         "import logging\n",
         "\n",
         "\n",
